	function, now only takes a single template parameter and only call
	the strict copy constructor. Creation of the _Param_Construct function
	that replace the former _Copy_Construct implementation.

	* cstdlib: Fix abs definition for MSVC compilers.

	* test/unit: Fixing 64 bits warnings in many tests.

	* src/c_locale_win32/c_locale_win32.c: Fixing 64 bits warnings.

2005-03-04  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_cmath.h: removed recursive include of cmath header
	
	* src/complex_impl.h: include cmath instead of stl/_cmath.h

	* stlport/stl/_complex.h: idem.

	* stlport/stl/_valarray.h: idem.

	* test/unit/unary.h: workaround for namespace resolution.

	* test/unit/resolve_name.cpp: test to show problem with namespace resolution.

	* stlport/cmath, stlport/stl/_cmath.h: standard require overloaded math
	functions for double and float arguments. Import with 'using' directive
	can't provide such overload. Removed import with 'using', used direct
	inline wrappers in namespace stlp_std instead. Cleaning code.

	* stlport/cstdlib: complement to cmath---the same as above for abs.

	* stlport/stl/_config.h: uClibc declare pthread_spin... but ones absent
	in the library indeed.

2005-03-02  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/top.mak: move .PHONY target to the bottom, it work here
	as expected

	* build/Makefiles/gmake/depend.mak, targetdirs.mak: reduce amount of dummy
	targets; fix creation of directories for install.

	* build/Makefiles/gmake/linux/rules-install-so.mak: ditto.

	* stlport/stl/_config.h, stlport/config/stl_gcc.h: support of gcc/linux/uClibc

	* src/_stdio_file.h, num_put_float.cpp, stdio_streambuf.cpp: uClibc support

	* stlport/cwchar: ditto.

2005-03-01  Francois Dumont  <dums@stlport...>

	* stlport/stl/_threads.h, _windows.h, _rope.c: Fix of a 64 bits portage issue
	in the rope implementation under Win64 thanks Patrick Bergeron report.

2005-02-28  Francois Dumont  <dums@stlport...>
